syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_create_categories.proto";
import "rpc_get_task.proto";
import "rpc_delete_task.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/demola234/todogrpc/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "TodoGrpc";
      version: "1.0";
      contact: {
        name: "TodoGrpc";
        url: "https://github.com/demola234/todogrpc";
        email: "kolawoleoluwasegun567@gmail.com";
      };
    };
    security_definitions: {
      security: {
        key: "bearer"
        value: {
          type: TYPE_API_KEY
          in: IN_HEADER
          name: "Authorization Bearer"
          description: "Authentication token, prefixed by Bearer: Bearer <token>"
        }
      }
    }
    security: {
      security_requirement: {
        key: "bearer"
  
      }
    };
  };

service TodoGrpc {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/api/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to create a new user";
            summary: "Create a new user";
            tags: "Authentication";
            security: { } // Disable security key
          };
    }
    rpc GetUser(EmptyRequest) returns (GetUserResponse){
        option (google.api.http) = {
            get: "/api/v1/get_user"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to get a user";
            summary: "Get a user";
            tags: "Authentication";
            security: { } // Disable security key
          };
    }
    rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse){
        option (google.api.http) = {
            post: "/api/v1/create_category"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to create a new category";
            summary: "Create a new category";
            tags: "Category";
            security: { } // Disable security key
          };
    }
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse){
        option (google.api.http) = {
            post: "/api/v1/create_task"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to create a new task";
            summary: "Create a new task";
            tags: "Task";
            security: { } // Disable security key
          };
    }
    rpc GetTask(EmptyGetRequest) returns (stream GetAllTaskResponse){
        option (google.api.http) = {
            get: "/api/v1/get_task"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to get all task";
            summary: "Get all task";
            tags: "Task";
            security: { } // Disable security key
          };
    }
    rpc DeleteTask(DeleteTaskRequest) returns (EmptyTaskRequest){
        option (google.api.http) = {
            delete: "/api/v1/delete_task"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to delete a task";
            summary: "Delete a task";
            tags: "Task";
            security: { } // Disable security key
          };
    }
    rpc UpdateTask(UpdateTaskRequest) returns (EmptyTaskRequest){
        option (google.api.http) = {
            put: "/api/v1/update_task"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "User this API to update a task";
            summary: "Update a task";
            tags: "Task";
            security: { } // Disable security key
          };
    }
}